# py-objectstore

./: .bumpversion.cfg  .gitignore  .pypirc  README.md  README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
py_objectstore/: __init__.py
tests/: test_py_objectstore.py
